testdata/golden/sema/valid/fn_type_no_return.sg
// scenario: function type with no return (unit)
fn accepts_action(action: fn()) {
    // Function type parameter with unit return
    let a: fn() = action;
}

fn do_nothing() {
}
