testdata/golden/sema/invalid/default_missing_type.sg
// scenario: default without explicit type arguments must fail inference
fn usage() {
    let a = default();
}
